[package]
name = "causal-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Causal discovery algorithms (PCMCI family, static PC/GES/LiNGAM/NOTEARS, Bayesian graph posterior)"
readme = "README.md"

[lints]
workspace = true

[dependencies]
causal-core = { path = "../causal-core" }
causal-data = { path = "../causal-data" }
causal-graph = { path = "../causal-graph" }
causal-prob = { path = "../causal-prob" }
causal-state = { path = "../causal-state" }
causal-stats = { path = "../causal-stats" }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "pcmci"
harness = false

[[bench]]
name = "orientation"
harness = false

[[bench]]
name = "pag_orientation"
harness = false

[[bench]]
name = "rpcmci"
harness = false
