[package]
name = "causal-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Causal discovery algorithms (PCMCI family, static PC/GES/LiNGAM/NOTEARS, Bayesian graph posterior)"
readme = "README.md"

[lints]
workspace = true

[dependencies]
causal-core = { version = "0.1.0", path = "../causal-core" }
causal-data = { version = "0.1.0", path = "../causal-data" }
causal-graph = { version = "0.1.0", path = "../causal-graph" }
causal-prob = { version = "0.1.0", path = "../causal-prob" }
causal-state = { version = "0.1.0", path = "../causal-state" }
causal-stats = { version = "0.1.0", path = "../causal-stats" }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "pcmci"
harness = false

[[bench]]
name = "orientation"
harness = false

[[bench]]
name = "pag_orientation"
harness = false

[[bench]]
name = "rpcmci"
harness = false
