[package]
name = "causal-estimate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Estimators for identified causal functionals"
readme = "README.md"

[lints]
workspace = true

[dependencies]
causal-core = { path = "../causal-core" }
causal-data = { path = "../causal-data" }
causal-expr = { path = "../causal-expr" }
causal-graph = { path = "../causal-graph" }
causal-identify = { path = "../causal-identify" }
causal-prob = { path = "../causal-prob" }
causal-stats = { path = "../causal-stats" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "propensity_bootstrap"
harness = false

[[bench]]
name = "posterior_functional"
harness = false

[[bench]]
name = "temporal_mediation"
harness = false
