[package]
name = "causal-estimate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Estimators for identified causal functionals"
readme = "README.md"

[lints]
workspace = true

[dependencies]
causal-core = { path = "../causal-core" }
causal-data = { path = "../causal-data" }
causal-expr = { path = "../causal-expr" }
causal-prob = { path = "../causal-prob" }
causal-stats = { path = "../causal-stats" }
thiserror = { workspace = true }

[dev-dependencies]
causal-graph = { path = "../causal-graph" }
causal-identify = { path = "../causal-identify" }
criterion = { workspace = true }

[[bench]]
name = "propensity_bootstrap"
harness = false

[[bench]]
name = "posterior_functional"
harness = false

[[bench]]
name = "temporal_mediation"
harness = false
