[package]
name = "causal-estimate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Estimators for identified causal functionals"
readme = "README.md"

[lints]
workspace = true

[dependencies]
causal-core = { version = "0.1.0", path = "../causal-core" }
causal-data = { version = "0.1.0", path = "../causal-data" }
causal-expr = { version = "0.1.0", path = "../causal-expr" }
causal-kernels = { version = "0.1.0", path = "../causal-kernels" }
causal-prob = { version = "0.1.0", path = "../causal-prob" }
causal-stats = { version = "0.1.0", path = "../causal-stats" }
thiserror = { workspace = true }

[dev-dependencies]
causal-graph = { version = "0.1.0", path = "../causal-graph" }
causal-identify = { version = "0.1.0", path = "../causal-identify" }
criterion = { workspace = true }

[[bench]]
name = "propensity_bootstrap"
harness = false

[[bench]]
name = "posterior_functional"
harness = false

[[bench]]
name = "temporal_mediation"
harness = false
