[package]
name = "causal-expr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Arena-backed symbolic causal-functional IR"
readme = "README.md"

[lints]
workspace = true

[dependencies]
causal-core = { version = "0.1.0", path = "../causal-core" }
