[package]
name = "causal-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Causal graph types, dense indexes, and traversal workspaces"
readme = "README.md"

[lints]
workspace = true

[dependencies]
causal-core = { path = "../causal-core" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "traversal"
harness = false

[[bench]]
name = "dseparation"
harness = false

[[bench]]
name = "mseparation"
harness = false
