[package]
name = "causal-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Causal graph types, dense indexes, and traversal workspaces"
readme = "README.md"

[lints]
workspace = true

[dependencies]
causal-core = { path = "../causal-core" }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "traversal"
harness = false

[[bench]]
name = "dseparation"
harness = false

[[bench]]
name = "mseparation"
harness = false
