[package]
name = "causal-identify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Causal identification (backdoor and related)"
readme = "README.md"

[lints]
workspace = true

[dependencies]
causal-core = { path = "../causal-core" }
causal-expr = { path = "../causal-expr" }
causal-graph = { path = "../causal-graph" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "adjustment"
harness = false
