[package]
name = "causal-identify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Causal identification (backdoor and related)"
readme = "README.md"

[lints]
workspace = true

[dependencies]
causal-core = { path = "../causal-core" }
causal-data = { path = "../causal-data" }
causal-expr = { path = "../causal-expr" }
causal-graph = { path = "../causal-graph" }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "adjustment"
harness = false
