[package]
name = "causal-identify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Causal identification (backdoor and related)"
readme = "README.md"

[lints]
workspace = true

[dependencies]
causal-core = { version = "0.1.0", path = "../causal-core" }
causal-data = { version = "0.1.0", path = "../causal-data" }
causal-expr = { version = "0.1.0", path = "../causal-expr" }
causal-graph = { version = "0.1.0", path = "../causal-graph" }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "adjustment"
harness = false
