[package]
name = "causal-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Versioned artifact container and wire types for causal-library"
readme = "README.md"

[lints]
workspace = true

[dependencies]
causal-core = { path = "../causal-core" }
causal-estimate = { path = "../causal-estimate" }
causal-graph = { path = "../causal-graph" }
causal-identify = { path = "../causal-identify" }
causal-prob = { path = "../causal-prob" }
blake3 = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
