[package]
name = "causal-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Versioned artifact container and wire types for causal-library"
readme = "README.md"

[lints]
workspace = true

[dependencies]
causal-core = { path = "../causal-core" }
causal-data = { path = "../causal-data" }
causal-discovery = { path = "../causal-discovery" }
causal-estimate = { path = "../causal-estimate" }
causal-expr = { path = "../causal-expr" }
causal-graph = { path = "../causal-graph" }
causal-identify = { path = "../causal-identify" }
causal-model = { path = "../causal-model" }
causal-prob = { path = "../causal-prob" }
causal-validate = { path = "../causal-validate" }
blake3 = { workspace = true }
ciborium = { workspace = true }
memmap2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
